# zeitfaden-web-native

./: .gitignore  AGENTS.md  README.md  education.md  eslint.config.js  index.html  package-lock.json  package.json  research.md  vite.config.ts
.github/workflows/: deploy-sftp.yml
e2e/: geo-file-walkthrough.e2e.test.ts  import-query.e2e.test.ts  index-state.e2e.test.ts  rescan-folders.e2e.test.ts  responsive-layout.e2e.test.ts
public/: .htaccess  site.webmanifest
scripts/: e2e-smoke.mjs  generate-geo-fixtures.mjs
src/: App.css  App.pagination.test.tsx  App.tsx  i18n.ts  index.css  main.tsx  types.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/app/: useCatalogLifecycle.ts  useCatalogPage.ts  useDistanceResults.ts  useGeoIndexes.test.tsx  useGeoIndexes.ts  useImports.ts  useMediaViewer.ts  useSearchResults.ts  useSearchState.test.tsx  useSearchState.ts
src/catalog/: catalog.worker.ts  catalogClient.ts
src/components/: MapView.tsx  MediaViewer.test.tsx  MediaViewer.tsx  Thumbnail.tsx
src/demo/: sampleData.ts
src/geo/: bruteForceIndex.ts  diskSegmentedTreeIndex.test.ts  diskSegmentedTreeIndex.ts  dynamicZOrderGeoIndex.ts  dynamicZOrderPersistence.test.ts  dynamicZOrderPersistence.ts  geoIndexes.large.test.ts  geoIndexes.perf.test.ts  geoIndexes.test.ts  registry.ts  residentPackedDistanceIndex.test.ts  residentPackedDistanceIndex.ts  s2Cells.test.ts  s2Cells.ts  segmentedBallTreeGeoIndex.ts  segmentedBallTreePersistence.ts  (+3 more)
(+41 files in other folders)
