[package]
name = "zeitfaden"
version = "0.1.0"
description = "Geo media catalog with web and native runtimes"
authors = ["Zeitfaden"]
edition = "2021"

[lib]
name = "zeitfaden_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "zeitfaden"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
hex = "0.4"
image = { version = "0.25.10", default-features = true }
kamadak-exif = "0.6.1"
opener = { version = "0.8.5", features = ["reveal"] }
quick-xml = "0.38"
rfd = "0.17.2"
roxmltree = "0.20"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2.11.3", features = ["protocol-asset"] }
walkdir = "2.5"
